Add safe assert on colorspace missing when fetching layer property for alphaChannelDisable.

Fixes a user-level crash when deleting a Vector layer with an animated transparency mask.
Notably, this shouldn't be null, so I'm leaving a safe assert -- but a safe assert is
better than a hard crash for now.

BUG:452396